--- a/fullstack-backend/src/main/resources/application.properties
+++ b/fullstack-backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=fullstack-backend
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/fullstack
-spring.datasource.username=root
-spring.datasource.password=verma@ji#426
+spring.datasource.username=username
+spring.datasource.password=Password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
